fix bugs of overflow on pro-text

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -97,13 +97,13 @@ ul.option-set li a.selected {text-shadow: 2px 2px #034D14;}
 
 /* show products details  with ajax */
 #show-details{width:80%; 
-  height:180%; 
+  height:150%; 
   z-index:100; 
   left:1%; 
   position:absolute; 
   background:#1A1A1A; opacity:.7; display:none; border-radius:5px; color:#FBFBA8;
   padding:1%;
 }
-#show-details .pro-text {width:55%; overflow:hidden}
+#show-details .pro-text {width:55%; overflow:hidden; height:100%}
 #show-details .pro-text:hover {width:55%; overflow-y:scroll}
 #show-details .pro-pic { width:35%; margin-right:2% }
